<resources>
    <string name="app_name">Asteroid Radar</string>

    <string name="next_week_asteroids">View week asteroids</string>
    <string name="today_asteroids">View today asteroids</string>
    <string name="saved_asteroids">View saved asteroids</string>
    <string name="close_approach_data_title">Close approach date</string>
    <string name="absolute_magnitude_title">Absolute magnitude</string>
    <string name="estimated_diameter_title">Estimated diameter</string>
    <string name="relative_velocity_title">Relative velocity</string>
    <string name="distance_from_earth_title">Distance from earth</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="astronomica_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="hazardous_image">Potentially Hazardous Asteroid</string>
    <string name="non_hazardous_image">Not Hazardous Asteroid</string>
    <string name="help_button">Help</string>
    <string name="sad_emoji">Sad Emoji</string>
    <string name="happy_emoji">Happy Emoji</string>
    <string name="english">English</string>
    <string name="spanish">Español</string>
    <string name="hindi">हिन्दी</string>
    <string name="empty_image">Empty</string>
</resources>
