<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="asteroid"
            type="com.udacity.asteroidradar.Asteroid" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background">

        <ImageView
            android:id="@+id/activity_main_image_of_the_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:asteroidStatusImage="@{asteroid.potentiallyHazardous}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/asteroid_safe"
            tools:ignore="ContentDescription" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_image_of_the_day">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.Title"
                        android:text="@string/close_approach_data_title" />

                    <TextView
                        android:id="@+id/close_approach_date"
                        android:text="@{asteroid.closeApproachDate}"
                        style="@style/TextAppearance.Subtitle"
                        tools:text="2020-02-01" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:text="@string/absolute_magnitude_title"
                            style="@style/TextAppearance.Title" />

                        <TextView
                            android:id="@+id/absolute_magnitude"
                            app:astronomicalUnitText="@{asteroid.absoluteMagnitude}"
                            tools:text="25.126 au"
                            style="@style/TextAppearance.Subtitle"/>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/help_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:accessibilityLiveRegion="polite"
                        app:srcCompat="@drawable/ic_help_circle"
                        android:contentDescription="@string/help_button"/>

                </LinearLayout>

                <TextView
                    android:text="@string/estimated_diameter_title"
                    style="@style/TextAppearance.Title" />

                <TextView
                    android:id="@+id/estimated_diameter"
                    app:kmUnitText="@{asteroid.estimatedDiameter}"
                    tools:text="0.82 km"
                    style="@style/TextAppearance.Subtitle"/>

                <TextView
                    android:text="@string/relative_velocity_title"
                    style="@style/TextAppearance.Title" />

                <TextView
                    android:id="@+id/relative_velocity"
                    app:velocityText="@{asteroid.relativeVelocity}"
                    tools:text="11.9 km/s"
                    style="@style/TextAppearance.Subtitle"/>

                <TextView
                    android:text="@string/distance_from_earth_title"
                    style="@style/TextAppearance.Title" />

                <TextView
                    android:id="@+id/distance_from_earth"
                    app:astronomicalUnitText="@{asteroid.distanceFromEarth}"
                    tools:text="0.0924 au"
                    style="@style/TextAppearance.Subtitle"/>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>